--- a/serverless.yml
+++ b/serverless.yml
@@ -44,6 +44,13 @@ functions:
           path: todos/{id}
           method: get
           cors: true
+  get:
+    handler: todos/translate.translate
+    events:
+      - http:
+          path: todos/{id}
+          method: get
+          cors: true
 
   update:
     handler: todos/update.update
