corregimos un error en el serverless.yml en la nueva función de traducción

--- a/serverless.yml
+++ b/serverless.yml
@@ -44,7 +44,7 @@ functions:
           path: todos/{id}
           method: get
           cors: true
-  get:
+  translate:
     handler: todos/translate.translate
     events:
       - http:
